--- a/index.html
+++ b/index.html
@@ -94,47 +94,44 @@ canvas {
 </div>
 
 <script>
-/* ===== ПАРАМЕТРЫ ===== */
-const SPEED = 1.2;
-const TURN_SPEED = 0.08;
-const SEGMENT_STEP = 10;
+/* ===== НАСТРОЙКИ ===== */
+const SPEED = 1;
+const TURN = 0.1;
 const REQUIRED = 5;
 
 /* ===== ПЕРЕМЕННЫЕ ===== */
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 
-let snakePath = [];
-let maxLength = 30;
+let snake = [];
 let angle = 0;
 let targetAngle = 0;
 
 let items = [];
 let correctCount = 0;
-let gameRunning = false;
-let glowTimer = 0;
+let running = false;
 let CONFIG = null;
 
 /* ===== КЛИК = НАПРАВЛЕНИЕ ===== */
 canvas.addEventListener("click", e => {
-  if (!gameRunning) return;
+  if (!running) return;
   const r = canvas.getBoundingClientRect();
   const x = e.clientX - r.left;
   const y = e.clientY - r.top;
-  const head = snakePath[0];
-  targetAngle = Math.atan2(y - head.y, x - head.x);
+  const h = snake[0];
+  targetAngle = Math.atan2(y - h.y, x - h.x);
 });
 
 /* ===== СТАРТ ===== */
 document.getElementById("startBtn").onclick = () => {
   CONFIG = {
     task: taskInput.value,
-    correct: correctInput.value.split(",").map(s=>s.trim()),
-    wrong: wrongInput.value.split(",").map(s=>s.trim())
+    correct: correctInput.value.split(",").map(s=>s.trim()).filter(Boolean),
+    wrong: wrongInput.value.split(",").map(s=>s.trim()).filter(Boolean)
   };
   taskTitle.innerText = CONFIG.task;
   resetGame();
-  gameRunning = true;
+  running = true;
 };
 
 /* ===== ЭЛЕМЕНТЫ ===== */
@@ -155,38 +152,38 @@ function spawnItem(forceCorrect=false) {
 }
 
 function ensureItems() {
-  const hasCorrect = items.some(i=>i.correct);
-  if (!hasCorrect) spawnItem(true);
+  if (!items.some(i=>i.correct)) spawnItem(true);
   while (items.length < 4) spawnItem();
 }
 
 /* ===== ДВИЖЕНИЕ ===== */
 function moveSnake() {
-  angle += (targetAngle - angle) * TURN_SPEED;
-  const head = snakePath[0];
-
-  const newHead = {
-    x: head.x + Math.cos(angle) * SPEED,
-    y: head.y + Math.sin(angle) * SPEED
+  angle += (targetAngle - angle) * TURN;
+  const h = snake[0];
+  const nh = {
+    x: h.x + Math.cos(angle) * SPEED,
+    y: h.y + Math.sin(angle) * SPEED
   };
-
-  snakePath.unshift(newHead);
-  while (snakePath.length > maxLength) snakePath.pop();
+  snake.unshift(nh);
+  while (snake.length > 40 + correctCount * 8) snake.pop();
 }
 
 /* ===== СБОР ===== */
 function checkItems() {
-  const head = snakePath[0];
+  const h = snake[0];
   items.forEach((it,i)=>{
-    const dx=head.x-it.x;
-    const dy=head.y-it.y;
-    if (Math.sqrt(dx*dx+dy*dy)<16) {
+    const dx=h.x-it.x;
+    const dy=h.y-it.y;
+    if (Math.sqrt(dx*dx+dy*dy) < 14) {
       if (it.correct) {
         correctCount++;
-        maxLength += SEGMENT_STEP;
-        glowTimer = 15;
-        showFeedback(true);
-      } else showFeedback(false);
+        feedback.innerText="Верно!";
+        feedback.className="success";
+      } else {
+        feedback.innerText="Подумай ещё";
+        feedback.className="error";
+      }
+      setTimeout(()=>feedback.innerText="",500);
       items.splice(i,1);
     }
   });
@@ -194,12 +191,8 @@ function checkItems() {
 
 /* ===== ПРОГРЕСС ===== */
 function updateProgress() {
-  const p=Math.min(correctCount/REQUIRED*100,100);
-  progressBar.style.width=p+"%";
-  if (p>=100) {
-    gameRunning=false;
-    showStar();
-  }
+  progressBar.style.width =
+    Math.min(correctCount/REQUIRED*100,100)+"%";
 }
 
 /* ===== ОТРИСОВКА ===== */
@@ -213,52 +206,30 @@ function draw() {
     ctx.arc(it.x,it.y,10,0,Math.PI*2);
     ctx.fill();
     ctx.fillStyle="#000";
-    ctx.fillText(it.text,it.x-10,it.y-14);
+    ctx.fillText(it.text,it.x-12,it.y-14);
   });
 
   // змейка
+  ctx.strokeStyle="#66bb6a";
   ctx.lineWidth=8;
-  ctx.strokeStyle=glowTimer>0?"#aed581":"#66bb6a";
   ctx.beginPath();
-  snakePath.forEach((p,i)=>{
+  snake.forEach((p,i)=>{
     if(i===0) ctx.moveTo(p.x,p.y);
     else ctx.lineTo(p.x,p.y);
   });
   ctx.stroke();
 
-  // голова + глазки
-  const h=snakePath[0];
+  // голова
+  const h=snake[0];
   ctx.fillStyle="#388e3c";
   ctx.beginPath();
   ctx.arc(h.x,h.y,7,0,Math.PI*2);
   ctx.fill();
-
-  ctx.fillStyle="#000";
-  ctx.beginPath();
-  ctx.arc(h.x+3,h.y-2,1.5,0,Math.PI*2);
-  ctx.arc(h.x+3,h.y+2,1.5,0,Math.PI*2);
-  ctx.fill();
-
-  if(glowTimer>0) glowTimer--;
-}
-
-/* ===== ЗВЕЗДА ===== */
-function showStar() {
-  ctx.fillStyle="#ffd54f";
-  ctx.font="40px Arial";
-  ctx.fillText("⭐ Молодец!",180,200);
-}
-
-/* ===== ФИДБЕК ===== */
-function showFeedback(ok) {
-  feedback.innerText=ok?"Верно!":"Подумай ещё";
-  feedback.className=ok?"success":"error";
-  setTimeout(()=>feedback.innerText="",600);
 }
 
 /* ===== ЦИКЛ ===== */
 function loop() {
-  if (gameRunning) {
+  if (running) {
     moveSnake();
     checkItems();
     ensureItems();
@@ -270,10 +241,10 @@ function loop() {
 
 /* ===== СБРОС ===== */
 function resetGame() {
-  snakePath=[{x:300,y:200}];
+  snake=[{x:300,y:200}];
   angle=0; targetAngle=0;
-  items=[]; correctCount=0;
-  maxLength=30;
+  items=[];
+  correctCount=0;
   progressBar.style.width="0%";
   ensureItems();
 }
