--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ canvas {
   min-height:22px;
 }
 .success { color:green; }
-.error { color:#ef6c00; }
-.fail { color:#c62828; }
+.error { color:#c62828; }
+.fail { color:#b71c1c; }
 </style>
 </head>
 
@@ -97,7 +97,7 @@ canvas {
    НАСТРОЙКИ
 ===================== */
 
-const MOVE_SPEED = 1.2;          // ⬅ МЕДЛЕННО и комфортно
+const MOVE_SPEED = 0.9;          // ⬅ ещё медленнее
 const SEGMENT_STEP = 10;
 const REQUIRED = 6;
 const MIN_CORRECT_ON_FIELD = 2;
@@ -113,7 +113,7 @@ const ctx = canvas.getContext("2d");
 let path = [];
 let maxLength = 30;
 
-let direction = { x: 1, y: 0 }; // направление движения
+let direction = { x: 1, y: 0 };
 let items = [];
 let correctCount = 0;
 let gameRunning = false;
@@ -161,16 +161,12 @@ document.getElementById("startBtn").onclick = () => {
 ===================== */
 
 function spawnItem(forceCorrect=false) {
-  let pool;
-
-  if (forceCorrect) {
-    pool = CONFIG.correct.map(t=>({text:t, correct:true}));
-  } else {
-    pool = [
-      ...CONFIG.correct.map(t=>({text:t, correct:true})),
-      ...CONFIG.wrong.map(t=>({text:t, correct:false}))
-    ];
-  }
+  let pool = forceCorrect
+    ? CONFIG.correct.map(t=>({text:t, correct:true}))
+    : [
+        ...CONFIG.correct.map(t=>({text:t, correct:true})),
+        ...CONFIG.wrong.map(t=>({text:t, correct:false}))
+      ];
 
   const it = pool[Math.floor(Math.random()*pool.length)];
 
@@ -194,7 +190,7 @@ function ensureItems() {
 }
 
 /* =====================
-   ДВИЖЕНИЕ (БЕЗ ОСТАНОВКИ)
+   ДВИЖЕНИЕ
 ===================== */
 
 function moveSnake() {
@@ -205,6 +201,16 @@ function moveSnake() {
     x: head.x + direction.x * MOVE_SPEED,
     y: head.y + direction.y * MOVE_SPEED
   };
+
+  // ⛔ СТОЛКНОВЕНИЕ СО СТЕНОЙ
+  if (
+    newHead.x < 0 || newHead.x > canvas.width ||
+    newHead.y < 0 || newHead.y > canvas.height
+  ) {
+    gameRunning = false;
+    showFail("Змейка врезалась в стену 🧱");
+    return;
+  }
 
   path.unshift(newHead);
   while (path.length > maxLength) path.pop();
@@ -227,7 +233,7 @@ function checkSelfCollision() {
 }
 
 /* =====================
-   СБОР
+   СБОР ЭЛЕМЕНТОВ
 ===================== */
 
 function checkItemCollision() {
@@ -237,13 +243,18 @@ function checkItemCollision() {
     const dx=head.x-item.x;
     const dy=head.y-item.y;
     if (Math.sqrt(dx*dx+dy*dy) < 14) {
-      if (item.correct) {
-        correctCount++;
-        maxLength += SEGMENT_STEP;
-        showFeedback(true);
-      } else {
-        showFeedback(false);
+
+      // ❌ НЕПРАВИЛЬНЫЙ ОТВЕТ = ПРОИГРЫШ
+      if (!item.correct) {
+        gameRunning = false;
+        showFail("Неверный выбор ❌");
+        return;
       }
+
+      // ✔ ПРАВИЛЬНЫЙ
+      correctCount++;
+      maxLength += SEGMENT_STEP;
+      showFeedback(true);
       items.splice(i,1);
     }
   });
@@ -264,8 +275,8 @@ function updateProgress() {
 
 function showFeedback(ok) {
   const f = document.getElementById("feedback");
-  f.innerText = ok ? "Верно!" : "Подумай ещё";
-  f.className = ok ? "success" : "error";
+  f.innerText = "Верно!";
+  f.className = "success";
   setTimeout(()=>f.innerText="",600);
 }
 
@@ -328,6 +339,7 @@ function resetGame() {
   correctCount = 0;
   items = [];
   document.getElementById("progress-bar").style.width="0%";
+  document.getElementById("feedback").innerText="";
   ensureItems();
 }
 
